fixed feed padding issues and aligned

--- a/css/style.css
+++ b/css/style.css
@@ -336,7 +336,7 @@ header {
     left: 10px;
 }
 .feed__box{
-    padding: 20px;
+    /* padding: 20px; */
     background: var(--fb-whitebg);
     max-width: 700px;
     width: 100%;
@@ -347,11 +347,13 @@ header {
 }
 .newpost{
     display: flex;
+    padding: 20px 20px 5px;
     margin-bottom: 10px;
+    align-items: center;
 }
 .newpost__user-img{
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
     margin-right: 10px;
 }
@@ -398,7 +400,7 @@ header {
     color: var(--fb-yellow);
 }
 .photopost{
-    padding: 20px 20px 20px;
+    /* padding: 20px 20px 20px; */
     margin-bottom: 20px;
 }
 .photopost__info{
